# battleship

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
battleship/: CMakeLists.txt
battleship/include/: battleship.h  coordinate.h  ship.h
battleship/src/: config.cpp  functions.cpp  grid.cpp  heat.cpp  ship.cpp
hello/: CMakeLists.txt
hello/include/: hello.h
hello/src/: get_config_path.cpp
tests/: CMakeLists.txt  battleship_tests.cpp  configurations_tests.cpp  coordinate_tests.cpp  hellotests.cpp
